fixes broken css

--- a/languages/minecraftjs/camera.css
+++ b/languages/minecraftjs/camera.css
@@ -1,4 +1,4 @@
-.controls, .camera .holder{
+.camera, .camera .holder{
     border-color: hsl(164,65%,83%);
     background-color: hsl(164, 65%, 93%);
 }
